--- a/AdvancedGrapGames/Graphics For Games/Graphics Coursework/GraphicsCoursework.vcxproj
+++ b/AdvancedGrapGames/Graphics For Games/Graphics Coursework/GraphicsCoursework.vcxproj
@@ -68,6 +68,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
