--- a/AdvancedGrapGames/Graphics For Games/13) Cube Mapping/Tutorial13.vcxproj
+++ b/AdvancedGrapGames/Graphics For Games/13) Cube Mapping/Tutorial13.vcxproj
@@ -71,10 +71,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="HeightMapPNG.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Tutorial13.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HeightMapPNG.h" />
     <ClInclude Include="Renderer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
